--- a/Silverstripe-Quality-Assurance-Team/pom.xml
+++ b/Silverstripe-Quality-Assurance-Team/pom.xml
@@ -2,8 +2,8 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>Demo</groupId>
-  <artifactId>Ultimatix</artifactId>
+  <groupId>Silverstripe-Quality-Assurance-Skinny_Framework</groupId>
+  <artifactId>Silverstripe-Quality-Assurance-Team</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <packaging>jar</packaging>
 
